<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bot Or Not</string>
    <string name="app_id">1234567890123</string>
    <string name="action_intro">Intro</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="back_button">Back</string>
    <string name="next_button">OK</string>
    <string name="skip_button">Next</string>
    <string name="bot_button">BOT</string>
    <string name="not_button">NOT</string>
    <string name="regular_button">Demo</string>
    <string name="facebook_button">Facebook</string>
    <string name="botness_label_1">BASIC</string>
    <string name="botness_label_2">Booting</string>
    <string name="botness_label_3">Bot!</string>
    <string name="botness_label_4">Botter!!</string>
    <string name="botness_label_5">Android!!!</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
